# vodozemac

./: .deny.toml  .gitignore  .pre-commit-config.yaml  .rumdl.toml  .rustfmt.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  build.rs  cliff.toml  codecov.yaml  crates.js  help.html  index.html  justfile  release.toml  search-index.js  settings.html  src-files.js  tarpaulin.toml
.cargo/: mutants.toml
.config/: nextest.toml
.github/: CODEOWNERS
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  coverage.yml  deny.yml  docs.yml  msrv.yaml  mutants-full.yml  mutants.yml  zizmor.yml
afl/: README.md
afl/hpke-message-decoding/: Cargo.toml
afl/megolm-decoding/: Cargo.toml
afl/megolm-decryption/: Cargo.toml
afl/megolm-session-creation/: Cargo.toml
afl/megolm-session-import/: Cargo.toml
afl/olm-account-unpickling/: Cargo.toml
afl/olm-account-unpickling/in/: message_1  message_10  message_100  message_101  message_102  message_103  message_104  message_105  message_106  message_107  message_108  message_109  message_11  message_110  message_111  message_112  message_113  message_114  message_115  message_116  message_117  message_118  message_119  message_12  message_120  message_121  message_122  message_123  message_13  message_14  message_15  message_16  message_17  message_18  message_19  message_2  message_20  message_21  message_22  message_23  (+82 more)
afl/olm-account-unpickling/src/: main.rs
afl/olm-decryption/: Cargo.toml  message_102  message_108  message_112  message_12  message_120  message_122  message_134  message_135  message_137  message_143  message_149  message_16  message_165  message_22  message_27  message_28  message_32  message_34  message_50  message_57  message_59  message_68  message_69  message_71  message_77  message_83  message_88  message_90  message_95  message_96  message_99
afl/olm-message-decoding/: Cargo.toml  message_101  message_111  message_113  message_118  message_120  message_124  message_125  message_129  message_130  message_135  message_136  message_140  message_142  message_18  message_20  message_21  message_40  message_5  message_50  message_54  message_59  message_63  message_65  message_73  message_78  message_79  message_8  message_87  message_91  message_93  message_94  message_99
afl/olm-message-decoding/in/: message_1  message_10  message_101  message_102  message_104  message_106  message_107  message_108  message_11  message_110  message_111  message_112  message_113  message_115  message_116  message_117  message_118  message_119  message_12  message_121  message_122  message_123  message_124  message_125  message_126  message_127  message_128  message_13  message_132  message_134  message_137  message_138  message_139  message_14  message_141  message_143  message_15  message_16  message_17  message_18  (+73 more)
afl/olm-message-decoding/src/: main.rs
afl/rehydrate-device/: Cargo.toml
benches/: megolm_benchmark.rs  olm_benchmark.rs
contrib/zeroization-test/: Cargo.toml  Makefile  README.md  test_zeroization.txt
search.desc/vodozemac/: vodozemac-desc-0-.js
search.index/: 001f03b7f016.js  006856a66556.js  0106fc00e119.js  016d51d90670.js  01cb42c6f6.js  01cb4729c6.js  01db27e36620.js  01f2feb058.js  02051ce5c31b.js  020d673e3a.js  0236b2f6e057.js  02913f5df1.js  033e9683dddf.js  03b67bbd14.js  03ea7b99fc57.js  043441b00ed1.js  0446345dbd16.js  04de078b84.js  04defae6914b.js  05067bf67ea0.js  053b9e143ee6.js  055e48a6a7c8.js  0579d552b03c.js  05ea38ca35.js  0616ae214c26.js  06b8835cfbf8.js  06c8007ff462.js  06e62b1f8aac.js  0728f13d7842.js  073c02e6c62d.js  082a8fa2be7f.js  0879f2883574.js  0894a89eacc7.js  09bae8112f66.js  09d9b3e8eb.js  0a154f35d9.js  0a26404bd10e.js  0a3600a9ae.js  0ab1983941.js  0ab451e25e.js  (+385 more)
search.index/crateNames/: 812051c460.js
search.index/desc/: 08f0af856de8.js  0cc0bcff90.js  1d42685d46.js  5065dd8a5a.js  f53a869d525f.js
search.index/entry/: 13152a2417.js  2f52a3555e82.js  36a432c5e743.js  c5426b381e28.js  c74bc0d6695b.js  d5ba608594.js
search.index/function/: 56648d29f4f5.js  570e0c680761.js  81aa2d2e2c.js  d9f07d98d6.js  da125510e4b0.js  ee9e9da8d51e.js
search.index/generic_inverted_index/: 337f8396cb93.js  57d72e2573fb.js  7e24dd3e41.js  d328e4060b70.js  dcbcd5ed63f5.js  f767d7d7ca.js
search.index/name/: 1c95bd7080.js  25db89f1d4f0.js  5de1e4f6cc5d.js  c51c6d6cd2.js  db2ecb0fc42e.js  e2de4e8a95da.js
search.index/normalizedName/: 05bc6b8294.js  5a1b66901583.js  5aeaa1382ebe.js  6b6770a140e0.js  a0678d2a2e94.js  e9e0dfbf4f.js
search.index/path/: 0109cf24490c.js  044b13574c5d.js  1b199c7f1d.js  3e32ad20ecd0.js  71fe866f428c.js  87f055a51a66.js  c65dee68d2.js
search.index/type/: 1da6eda7d6.js  76be02c100.js  7f7b2eb251b6.js  9e4d4633ec98.js  b89f3eced229.js  c4cd31404e.js
src/: account.rs  cipher.rs  fuzzing.rs  lib.rs  megolm.rs  messages.rs  pk_encryption.rs  sas.rs  session_keys.rs  shared_secret.rs  types.rs  utilities.rs
src/account/: fallback_keys.rs  mod.rs  one_time_keys.rs  types.rs
src/cipher/: key.rs  mod.rs
src/ecies/: messages.rs  mod.rs
src/hazmat/: mod.rs  olm.rs
src/hpke/: check_code.rs  error.rs  messages.rs  mod.rs  recipient.rs  response_context.rs  sender.rs
src/megolm/: group_session.rs  inbound_group_session.rs  message.rs  mod.rs  ratchet.rs  session_config.rs  session_keys.rs
src/messages/: inner.rs  mod.rs
src/olm/: mod.rs  session_config.rs  session_keys.rs  shared_secret.rs
src/secure_channel/: messages.rs  (+1 more)
tests/: olm.rs  with_rng.rs
vodozemac/: all.html  enum.Base64DecodeError.html  enum.DecodeError.html  enum.DehydratedDeviceError.html  enum.KeyError.html  enum.LibolmPickleError.html  enum.PickleError.html  enum.SignatureError.html  fn.base64_decode.html  fn.base64_encode.html  index.html  sidebar-items.js  static.VERSION.html  struct.Curve25519PublicKey.html  struct.Curve25519SecretKey.html  struct.Ed25519Keypair.html  struct.Ed25519PublicKey.html  struct.Ed25519SecretKey.html  struct.Ed25519Signature.html  struct.KeyId.html  struct.ProtoBufDecodeError.html  struct.SharedSecret.html
(+614 files in other folders)
