[package]
authors = [
    "Damir Jelić <poljar@termina.org.uk>",
    "Denis Kasak <dkasak@termina.org.uk>",
]
name = "vodozemac"
description = "A Rust implementation of Olm and Megolm"
repository = "https://github.com/matrix-org/vodozemac"
version = "0.9.0"
edition = "2024"
keywords = ["matrix", "chat", "messaging", "olm", "cryptography"]
license = "Apache-2.0"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(fuzzing)'] }
unsafe_code = "deny"
missing_docs = "deny"
dead_code = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
rust_2018_idioms = "deny"

[lints.clippy]
panic = "deny"
unreachable = "deny"
expect_used = "deny"
unwrap_used = "deny"
mem_forget = "deny"

[features]
default = ["libolm-compat"]
wasm_js = ["getrandom/wasm_js"]
strict-signatures = []
libolm-compat = []
insecure-pk-encryption = ["libolm-compat"]
# The low-level-api feature exposes extra APIs that are only useful in advanced
# use cases and require extra care to use.
low-level-api = []

[dependencies]
aes = { version = "0.9.0-rc.4" }
cipher = { version = "0.5.0", features = ["alloc"] }
arrayvec = { version = "0.7.6", features = ["serde"] }
base64 = "0.22.1"
base64ct = { version = "1.8.3", features = ["std", "alloc"] }
cbc = { version = "0.2.0-rc.3" }
chacha20poly1305 = "0.11.0-rc.3"
curve25519-dalek = { version = "5.0.0-pre.6", default-features = false, features = ["zeroize"] }
ed25519-dalek = { version = "3.0.0-pre.6", default-features = false, features = ["rand_core", "serde", "hazmat", "zeroize"] }
getrandom = "0.4.1"
hkdf = "0.13.0-rc.5"
hmac = "0.13.0-rc.5"
hpke = { git = "https://github.com/rozbb/rust-hpke/", rev = "08b1cfc142e914b637f929a8b93bd6bab8a63d03", features = ["alloc", "x25519", "hazmat-streaming-enc"] }
matrix-pickle = { version = "0.2.2" }
prost = "0.14.3"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.149"
sha2 = "0.11.0-rc.5"
subtle = "2.6.1"
thiserror = "2.0.18"
x25519-dalek = { version = "3.0.0-pre.6", features = ["serde", "reusable_secrets", "static_secrets", "zeroize"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.101"
assert_matches2 = "0.1.2"
criterion = { version = "4.3.0", package = "codspeed-criterion-compat" }
ntest = "0.9.5"
olm-rs = "2.2.0"
proptest = "1.10.0"
insta = "1.46.3"

[patch.crates-io]
olm-rs = { git = "https://github.com/poljar/olm-rs", rev = "9f7108c3b852c39bf1d0f09ccaafb9a1cf7bb83e" }

[[bench]]
name = "olm_benchmark"
harness = false

[[bench]]
name = "megolm_benchmark"
harness = false
