[package]
authors = [
    "Damir Jelić <poljar@termina.org.uk>",
    "Denis Kasak <dkasak@termina.org.uk>",
]
name = "vodozemac"
description = "A Rust implementation of Olm and Megolm"
repository = "https://github.com/matrix-org/vodozemac"
version = "0.10.0"
edition = "2024"
keywords = ["matrix", "chat", "messaging", "olm", "cryptography"]
license = "Apache-2.0"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(fuzzing)'] }
unsafe_code = "deny"
missing_docs = "deny"
dead_code = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
rust_2018_idioms = "deny"

[lints.clippy]
panic = "deny"
unreachable = "deny"
expect_used = "deny"
unwrap_used = "deny"
mem_forget = "deny"

[features]
default = ["libolm-compat", "precomputed-tables"]
wasm_js = ["getrandom/wasm_js"]
libolm-compat = []
# Enables curve25519-dalek's precomputed basepoint tables, speeding up
# fixed-base scalar multiplication (key generation and Ed25519 signing) at the
# cost of embedding ~40 KB of lookup tables in the final binary.
precomputed-tables = ["curve25519-dalek/precomputed-tables"]
insecure-pk-encryption = ["libolm-compat"]
experimental-session-config = []
# The low-level-api feature exposes extra APIs that are only useful in advanced
# use cases and require extra care to use.
low-level-api = []

[dependencies]
aes = { version = "0.9.1" }
cipher = { version = "0.5.2", features = ["alloc"] }
arrayvec = { version = "0.7.8", features = ["serde"] }
base64 = "0.22.1"
base64ct = { version = "1.8.3", features = ["std", "alloc"] }
cbc = { version = "0.2.1" }
chacha20poly1305 = "0.11.0"
curve25519-dalek = { version = "5.0.0", default-features = false, features = ["zeroize"] }
ed25519-dalek = { version = "3.0.0", default-features = false, features = ["rand_core", "serde", "hazmat", "zeroize"] }
getrandom = "0.4.3"
hkdf = "0.13.0"
hmac = "0.13.0"
matrix-pickle = { version = "0.2.2" }
prost = "0.14.4"
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.150"
sha2 = "0.11.0"
subtle = "2.6.1"
thiserror = "2.0.18"
x25519-dalek = { version = "3.0.0", default-features = false, features = ["serde", "reusable_secrets", "static_secrets", "zeroize"] }
zeroize = { version = "1.9.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.103"
assert_matches2 = "0.1.2"
criterion = { version = "5.0.1", package = "codspeed-criterion-compat" }
ntest = "0.9.5"
olm-rs = "2.2.0"
proptest = "1.11.0"
insta = "1.48.0"

[patch.crates-io]
olm-rs = { git = "https://github.com/poljar/olm-rs", rev = "9f7108c3b852c39bf1d0f09ccaafb9a1cf7bb83e" }

[[bench]]
name = "olm_benchmark"
harness = false

[[bench]]
name = "megolm_benchmark"
harness = false
