[package]
name = "olm-message-decoding"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
afl = "*"
clap = { version = "3.1", features = ["derive"] }

[dependencies.vodozemac]
path = "../.."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(fuzzing)'] }
